// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - Button renders correctly 1`] = `
<button
  className="sc-bdVaJa cyKlHL"
/>
`;

exports[`COMPONENT - Button renders correctly grey button 1`] = `
<button
  className="sc-bdVaJa ItcSe"
/>
`;
